--- a/plugins/editor/design/editor.css
+++ b/plugins/editor/design/editor.css
@@ -1062,7 +1062,7 @@ blockquote.Quote {
     margin: 1em;
     padding: 1ex 10px;
     min-width: 200px;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 pre.CodeBlock {
